2006-03-05  Bill Wohler  <wohler@newt.com>

	Release MH-E version 7.93.

	* mh-e.el (Version, mh-version): Update for release 7.93.
	
2006-03-05  Bill Wohler  <wohler@newt.com>

	* mh-folder.el (mh-folder-mode): Drop 'load-path argument when
	calling mh-image-load-path-for-library since this is the default.

	* mh-letter.el (mh-letter-mode): Ditto.

	* mh-utils.el (mh-logo-display): Ditto.

2006-03-04  Bill Wohler  <wohler@newt.com>

	* mh-compat.el (mh-image-load-path-for-library): Move here from
	mh-utils.el and wrap with mh-defun-compat since this function will
	be soon added to image.el.
	
	* mh-utils.el (mh-image-load-path-for-library): Move to
	mh-compat.el.
	(mh-normalize-folder-name): Add return-nil-if-folder-empty
	argument which is useful when calling mh-normalize-folder-name to
	process the folder argument for the folders command.
	(mh-sub-folders): Use new flag to mh-normalize-folder-name to make
	this function more robust. It could too easily list the folders in
	/.
	(mh-folder-list): Fix a couple of problems pointed out by Thomas
	Baumann. Set folder to nil if empty. Don't append "/" if folder
	nil.

2006-03-03  Bill Wohler  <wohler@newt.com>

	* mh-folder.el (mh-folder-mode):  Rename mh-image-load-path to
	mh-image-load-path-for-library.

	* mh-letter.el (mh-letter-mode): Rename mh-image-load-path to
	mh-image-load-path-for-library.

	* mh-utils.el (mh-image-load-path): Rename to
	mh-image-load-path-for-library. Add example to docstring. Rename
	local variable mh-image-directory to image-directory. Move error
	checks to default case in cond and simplify.

	* mh-comp.el (mh-send-letter, mh-insert-auto-fields): Sync
	docstrings with manual.

2006-03-02  Bill Wohler  <wohler@newt.com>

	* mh-folder.el (mh-tool-bar-init): Autoload.
	(mh-folder-mode): Call mh-tool-bar-init conditionally in XEmacs.
	Set scoped variables image-load-path and load-path with updated
	mh-image-load-path before calling mh-tool-bar-folder-buttons-init.
